# gd32f5xx-demo-suites-cmake-vscode

./: README.md
Drivers/BSP/GD32F527I_EVAL/: gd32f527i_eval.c  gd32f527i_eval.h
Drivers/BSP/GD32F527R_START/: gd32f527r_start.c  gd32f527r_start.h
Drivers/BSP/GD32F527V_START/: gd32f527v_start.c  gd32f527v_start.h
Drivers/BSP/GD32F527Z_START/: gd32f527z_start.c  gd32f527z_start.h
Drivers/GD32F5xx_standard_peripheral/Include/: gd32f5xx_adc.h  gd32f5xx_can.h  gd32f5xx_cau.h  gd32f5xx_crc.h  gd32f5xx_ctc.h  gd32f5xx_dac.h  gd32f5xx_dbg.h  gd32f5xx_dci.h  gd32f5xx_dma.h  gd32f5xx_enet.h  gd32f5xx_exmc.h  gd32f5xx_exti.h  gd32f5xx_fmc.h  gd32f5xx_fwdgt.h  gd32f5xx_gpio.h  gd32f5xx_hau.h  gd32f5xx_i2c.h  gd32f5xx_i2c_add.h  gd32f5xx_ipa.h  gd32f5xx_iref.h  gd32f5xx_misc.h  gd32f5xx_pkcau.h  gd32f5xx_pmu.h  gd32f5xx_rcu.h  gd32f5xx_rtc.h  gd32f5xx_sai.h  gd32f5xx_sdio.h  gd32f5xx_spi.h  gd32f5xx_syscfg.h  gd32f5xx_timer.h  gd32f5xx_tli.h  gd32f5xx_trng.h  gd32f5xx_usart.h  gd32f5xx_wwdgt.h
Drivers/GD32F5xx_standard_peripheral/Source/: gd32f5xx_adc.c  gd32f5xx_can.c  gd32f5xx_cau.c  gd32f5xx_cau_aes.c  gd32f5xx_cau_des.c  gd32f5xx_cau_tdes.c  gd32f5xx_crc.c  gd32f5xx_ctc.c  gd32f5xx_dac.c  gd32f5xx_dbg.c  gd32f5xx_dci.c  gd32f5xx_dma.c  gd32f5xx_enet.c  gd32f5xx_exmc.c  gd32f5xx_exti.c  gd32f5xx_fmc.c  gd32f5xx_fwdgt.c  gd32f5xx_gpio.c  gd32f5xx_hau.c  gd32f5xx_hau_sha_md5.c  gd32f5xx_i2c.c  gd32f5xx_i2c_add.c  gd32f5xx_ipa.c  gd32f5xx_iref.c  gd32f5xx_misc.c  gd32f5xx_pkcau.c  gd32f5xx_pmu.c  gd32f5xx_rcu.c  gd32f5xx_rtc.c  gd32f5xx_sai.c  gd32f5xx_sdio.c  gd32f5xx_spi.c  gd32f5xx_syscfg.c  gd32f5xx_timer.c  gd32f5xx_tli.c  gd32f5xx_trng.c  gd32f5xx_usart.c  gd32f5xx_wwdgt.c
Drivers/GD32F5xx_usb_library/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
Drivers/GD32F5xx_usb_library/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
Drivers/GD32F5xx_usb_library/ustd/common/: usb_ch9_std.h
Projects/GD32F527I_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32F527I_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32F527I_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32F527I_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32F527I_EVAL/05_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32F527I_EVAL/06_USART_DMA/Application/: readme.txt
Projects/GD32F527I_EVAL/07_ADC_Temperature_Vrefint/Application/: readme.txt
Projects/GD32F527I_EVAL/08_ADC0_ADC1_Follow_up_mode/Application/: readme.txt
Projects/GD32F527I_EVAL/09_ADC0_ADC1_Regular_Parallel_mode/: CMakeLists.txt
Projects/GD32F527I_EVAL/09_ADC0_ADC1_Regular_Parallel_mode/Application/: readme.txt
Projects/GD32F527I_EVAL/10_DAC_Output_Voltage_Value/Application/: readme.txt
Projects/GD32F527I_EVAL/11_I2C_EEPROM/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/12_I2S_Audio_Player/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/13_SPI_Quad_Flash/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/14_EXMC_SDRAM/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/15_EXMC_SDRAM_DeepSleep/Application/: readme.txt
Projects/GD32F527I_EVAL/16_EXMC_NandFlash/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/17_SDIO_SDCardTest/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/18_CAN_Network/Application/: readme.txt
Projects/GD32F527I_EVAL/19_RCU_Clock_Out/Application/: readme.txt
Projects/GD32F527I_EVAL/20_CTC_Calibration/Application/: readme.txt
Projects/GD32F527I_EVAL/21_PMU_Sleep_Wakeup/Application/: readme.txt
Projects/GD32F527I_EVAL/21_PMU_Sleep_Wakeup/Drivers/BSP/GD32F527I_EVAL/: CMakeLists.txt
Projects/GD32F527I_EVAL/22_RTC_Calendar/Application/: readme.txt
Projects/GD32F527I_EVAL/23_TIMER_Breath_LED/Application/: readme.txt
Projects/GD32F527I_EVAL/24_TLI_IPA/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/25_DCI_OV2640/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/26_CAU/Application/: CMakeLists.txt  Expected_Results.txt  readme.txt
Projects/GD32F527I_EVAL/27_HAU/Application/: CMakeLists.txt  (+2 more)
Projects/GD32F527I_EVAL/30_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32F527I_EVAL/30_ENET_FreeRTOS_tcpudp/Middlewares/FreeRTOS/: CMakeLists.txt
Projects/GD32F527I_EVAL/30_ENET_Raw_tcpudp/: CMakeLists.txt
Projects/GD32F527I_EVAL/31_USB_Device_HID_Keyboard/: CMakeLists.txt
Projects/GD32F527I_EVAL/31_USB_Device_HID_Keyboard/Drivers/GD32F5xx_usb_library/: CMakeLists.txt
Projects/GD32F527I_EVAL/31_USB_Device_MSC_Udisk/Drivers/GD32F5xx_usb_library/: CMakeLists.txt
Projects/GD32F527I_EVAL/32_USB_Host_HID_Host/Drivers/GD32F5xx_usb_library/: CMakeLists.txt
Projects/GD32F527I_EVAL/32_USB_Host_MSC_Host/: CMakeLists.txt
Projects/GD32F527R_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32F527R_START/05_TIMER_Key_EXTI/: gd32f5xx_flash.ld
Projects/GD32F527R_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F527R_START/06_USB_MSC_Device/Drivers/BSP/GD32F527R_START/: CMakeLists.txt
Projects/GD32F527R_START/07_USB_MSC_Host/: CMakeLists.txt
Projects/GD32F527V_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32F527V_START/03_EXTI_Key_Interrupt_mode/: GD32F5xx.svd
Projects/GD32F527V_START/03_EXTI_Key_Interrupt_mode/Drivers/GD32F5xx_standard_peripheral/: CMakeLists.txt
Projects/GD32F527V_START/05_TIMER_Key_EXTI/Drivers/BSP/GD32F527V_START/: CMakeLists.txt
Projects/GD32F527V_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F527V_START/07_USB_MSC_Host/: CMakeLists.txt
Projects/GD32F527V_START/07_USB_MSC_Host/Drivers/GD32F5xx_usb_library/: CMakeLists.txt
Projects/GD32F527Z_START/04_USART_HyperTerminal_Interrupt/Drivers/BSP/GD32F527Z_START/: CMakeLists.txt
Projects/GD32F527Z_START/05_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32F527Z_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F527Z_START/07_USB_MSC_Host/: CMakeLists.txt
(+328 files in other folders)
